--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "node-cron": "^4.1.0",
     "prisma": "^6.9.0"
